@@ -4,8 +4,11 @@ DIST gcc-3.3.6-patches-1.6.tar.bz2 48814 RMD160 3f25b67015c6e4d874690c48d23292a6
 DIST gcc-3.3.6.tar.bz2 23972413 RMD160 b32c7a08c690857f0ac52dda3deb47cf5775d967 SHA1 2cc43978bb09af6c2ccfdf74797d10d7cc2596fb SHA256 1c1aa533c67e9da5e55ed4f5736258dc753466bd716bdae3fb88fb66e6ff1d7f
 DIST gcc-4.4.1-patches-1.0.tar.bz2 11203 RMD160 64d3d6b586442db5313ea49f675371c2fb9fc617 SHA1 85159a40172be6a403c43b268bf23e788ce0697a SHA256 e83392612ff54e4485bad4bb1888b2d247489777807cfaafb8aff3578c39d163
 DIST gcc-4.4.1.tar.bz2 62869928 RMD160 41cb4c76d1671b1d224d2a6e167ee183dd53d096 SHA1 9156ddb7e4cc72288ec31760d6ddc7981123a8a2 SHA256 cbefa9abd4adac0931e1b556072dcd8b32a360d4b95a94d7822c86bded803d5b
+DIST gcc-4.4.2-patches-1.0.tar.bz2 11040 RMD160 008701ce22ef001049871824528d193f66719a1c SHA1 5551ae84e0d6a25b10ca2d59aaf3901a6be0deb2 SHA256 63ef9cc54d9ebe497c6c0a0aa2ccbd006bfbf9dc01176cbfea5d90ad2ee122ee
+DIST gcc-4.4.2.tar.bz2 62919816 RMD160 25014a64d148005868449dfebf91a734d6322227 SHA1 6cf7d9204ff3e1a09f4f12b1372cd4129ab7f080 SHA256 1126b6a7b585b3a178bfb7d559221779eb7eba12ce01bc9ca5896f6f9ee639de
 EBUILD libstdc++-v3-3.3.6-r1.ebuild 4936 RMD160 cf15ad3b8f044e635b9dc03e99bd6299f0041804 SHA1 b1ad71b7903f797570ebb777e9f7e3ea984b9946 SHA256 56e98c4d2501cd4bbe12745ff15a938617745f7f5a3cd236702ed93aa959137c
 EBUILD libstdc++-v3-3.3.6.ebuild 4793 RMD160 51a8851b2e45ba5320d87664524d1a2aadc43e00 SHA1 f9034693d62ce41d47fa8f17010f44932dcef654 SHA256 5fced8531174653f19f80f19b22798c24f21bb8497e384b32187a691b5fa3960
 EBUILD libstdc++-v3-4.4.1.ebuild 2431 RMD160 8822158691cf3d096dd7d694592a0e9d5566aa12 SHA1 e067f8c1efe1c5e0eb040069a6fcb87501a62c5f SHA256 4a3c2ce99be6ef9849d59c030c1be6cd9af57d2e1796cf873e32232fea9c2e5c
-MISC ChangeLog 595 RMD160 0679a9fdc677fc8c01aa7662ca9ea06528e71cf6 SHA1 6ad64f19ea43682c8880af407daf4d64fd31eea8 SHA256 f7c697303645a8a0e99dd1ef93260c196ee7352d645a77715a15c1fa2535afc5
+EBUILD libstdc++-v3-4.4.2.ebuild 2508 RMD160 3f1215ad005e53fa4fbe0b0a3d524fe9a2abb274 SHA1 d98b6b3a7fd8e64518e7a6dc53b086789f08d98e SHA256 fab6e3032d8a8415713896a5f8cc484a664a38f39d1585e099f9dbddb4413763
+MISC ChangeLog 757 RMD160 a70eaaac6f3c9596bd43f44b6c4a4ce0e49d82d4 SHA1 f9b40e5219785075333db6034743e1951b226b29 SHA256 e61e8a5b56e6fbb384bc602c413dd42b9c99862e8bf82d6d86f1a5aa6efbb2be
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
