@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libstdc++-v3-4.4.2 (18 Oct 2009)
+
+  18 Oct 2009; Magnus Granberg <zorry@ume.nu> +libstdc++-v3-4.4.2.ebuild:
+  New GCC (GCC 4.4.2) and we move from slot 5 to 6.
+
 *libstdc++-v3-4.4.1 (04 Oct 2009)
 
   04 Oct 2009; Magnus Granberg <zorry@ume.nu>
